# Robot_Navigation_and_Control

./: .gitignore  README.md
Submission/: README.md
results/: drone_flight_data.csv  free_response.csv  pid_trajectory.csv  plot_drone_flight.py  plot_extra_graphs.py
review_main/: main.tex
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: ros2_controllers.yaml
src/my_robot_bringup/config/gz_gui/: fixed_camera.config
src/my_robot_bringup/launch/: my_robot_full_demo.launch.xml  my_robot_gazebo.launch.xml
src/my_robot_bringup/worlds/: pos.sdf
src/my_robot_control/: CMakeLists.txt  README.md  derivation.md  package.xml  setup.cfg  setup.py
src/my_robot_control/config/: pid_gains.yaml  sim.yaml
src/my_robot_control/include/: kinematics.hpp
src/my_robot_control/launch/: playback.launch.py
src/my_robot_control/my_robot_control/: __init__.py  controllers.py  dynamics.py  gazebo_control_node.py  integrator.py  kinematics.py  navigation.py  plotting.py  simulate_free.py  simulate_pid.py  urdf_params.py
src/my_robot_control/scripts/: gazebo_control  simulate_free  simulate_pid
src/my_robot_description/: package.xml
src/my_robot_description/launch/: display.launch.xml
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: common_properties.xacro  robot_arm.urdf.xacro  robot_arm_gazebo.xacro
swarm_project/ros2_ws/src/swarm_sim_bringup/models/: README.md
